--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,18 @@
   },
   "extends": [
     "standard",
-    "prettier"
+    "prettier",
+    "plugin:react/recommended"
   ],
+  
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
+  },
+  "rules": {
+    "no-undef":"off",
+    "no-unused-vars":"off",
+    "react/prop-types": "off",
+    "object-shorthand":[0,"never"]
   }
 }
