--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.7",
     "node": "^18.13.0",
     "prop-types": "z",
     "react": "^18.2.0",
